[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-trial-analysis"
version = "0.1.0"
description = "Clinical trial immune-cell analysis and dashboard"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8,<4",
    "pandas>=2.2,<3",
    "scipy>=1.12,<2",
    "seaborn>=0.13,<1",
    "streamlit>=1.35,<2",
]

[tool.setuptools]
py-modules = ["load_data", "analysis", "dashboard"]
